--- a/news.html
+++ b/news.html
@@ -8,9 +8,34 @@
 <h2>Latest News</h2>
 <div id="news"></div>
 
+
+  <style>
+button {
+  padding: 6px 10px;
+  margin-right: 6px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button:first-of-type {
+  background: #1b7f3a;
+  color: white;
+}
+
+button:last-of-type {
+  background: #c62828;
+  color: white;
+}
+</style>
+
+
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
 <script src="news.js"></script>
 
+
+
+  
 </body>
 </html>
