--- a/news.html
+++ b/news.html
@@ -6,14 +6,23 @@
 <body>
 
 <h2>Latest News</h2>
-<div id="news"></div>
 
-<!-- Firebase SDKs -->
+<label>Filter by Category:</label>
+<select id="categoryFilter">
+  <option value="ALL">All</option>
+  <option value="Community News">Community News</option>
+  <option value="Events">Events</option>
+  <option value="Education">Education</option>
+  <option value="Health">Health</option>
+  <option value="Announcements">Announcements</option>
+</select>
+
+<div id="newsList" style="margin-top:15px;"></div>
+
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
 
-<!-- News logic ONLY -->
+<script src="firebase.js"></script>
 <script src="news.js"></script>
 
 </body>
