--- a/login.html
+++ b/login.html
@@ -17,6 +17,11 @@
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+
+<!-- ✅ Add this -->
+<script src="firebase.js"></script>
+
+<!-- ✅ Then login.js -->
 <script src="login.js"></script>
 
 </body>
