--- a/login.html
+++ b/login.html
@@ -21,6 +21,13 @@
 <!-- ✅ Add this -->
 <script src="firebase.js"></script>
 
+  <script>
+  console.log("firebase:", typeof firebase);
+  console.log("auth:", typeof auth);
+  console.log("db:", typeof db);
+</script>
+
+
 <!-- ✅ Then login.js -->
 <script src="login.js"></script>
 
