--- a/news.html
+++ b/news.html
@@ -21,8 +21,16 @@
 
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+ 
+<script>
+  window.addEventListener("error", (e) => {
+    console.log("GLOBAL ERROR:", e.message, "at", e.filename, "line", e.lineno);
+  });
+</script>
 
-<script src="firebase.js"></script>
+<script src="firebase.js?v=10"></script>
+
+
 
 <script>
   console.log("firebase.js loaded? firebase =", typeof firebase);
