--- a/news.html
+++ b/news.html
@@ -19,16 +19,19 @@
 
 <div id="newsList" style="margin-top:15px;"></div>
 
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+
+<script src="firebase.js?v=10"></script>
+<script src="news.js?v=10"></script>
+
  
 <script>
   window.addEventListener("error", (e) => {
     console.log("GLOBAL ERROR:", e.message, "at", e.filename, "line", e.lineno);
   });
 </script>
-
-<script src="firebase.js?v=10"></script>
 
 
 
