--- a/login.html
+++ b/login.html
@@ -14,12 +14,14 @@
 
 <p id="error" style="color:red;"></p>
 
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
 
-<!-- ✅ Add this -->
-<script src="firebase.js"></script>
+<script src="firebase.js?v=10"></script>
+<script src="login.js?v=10"></script>
+
 
   <script>
   console.log("firebase:", typeof firebase);
