--- a/admin.html
+++ b/admin.html
@@ -29,7 +29,9 @@
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
 
-<script src="firebase.js"></script>
+<script src="firebase.js?v=10"></script>
+<script src="admin.js?v=10"></script>
+
 <script src="admin.js"></script>
 
 </body>
