--- a/admin.html
+++ b/admin.html
@@ -9,15 +9,14 @@
 
 <p><b>Reporter:</b> <span id="reporterName">Loading...</span></p>
 
-<label>Category:</label><br>
-<select id="category">
-  <option value="Community News">Community News</option>
-  <option value="Events">Events</option>
-  <option value="Education">Education</option>
-  <option value="Health">Health</option>
-  <option value="Announcements">Announcements</option>
+<label>Community:</label><br>
+<select id="community">
+  <option value="Mannanam (Kottayam)">Mannanam (Kottayam)</option>
+  <option value="Villoonni (Kottayam)">Villoonni (Kottayam)</option>
+  <option value="Villoonni (Kottayam)">Amalagiri (Kottayam)</option>
 </select>
 <br><br>
+
 
 <input id="title" placeholder="News Title"><br><br>
 <textarea id="content" placeholder="News Content"></textarea><br><br>
