--- a/news.html
+++ b/news.html
@@ -286,15 +286,14 @@
         <div class="sub">Janasabha community updates</div>
 
         <div class="toolbar">
-          <label for="categoryFilter" style="font-size:14px;color:#444;">Category:</label>
-          <select id="categoryFilter">
-            <option value="ALL">All</option>
-            <option value="Community News">Community News</option>
-            <option value="Events">Events</option>
-            <option value="Education">Education</option>
-            <option value="Health">Health</option>
-            <option value="Announcements">Announcements</option>
-          </select>
+         <label for="communityFilter" style="font-size:14px;color:#444;">Communities:</label>
+<select id="communityFilter">
+  <option value="ALL">All</option>
+  <option value="Mannanam (Kottayam)">Mannanam (Kottayam)</option>
+  <option value="Villoonni (Kottayam)">Villoonni (Kottayam)</option>
+   <option value="Amalagiri (Kottayam)">Amalagiri (Kottayam)</option>
+</select>
+
 
           <input id="searchBox" type="search" placeholder="Search title/content…" />
         </div>
