--- a/news.html
+++ b/news.html
@@ -286,7 +286,7 @@
         <div class="sub">Janasabha community updates</div>
 
         <div class="toolbar">
-         <label for="communityFilter" style="font-size:14px;color:#444;">Communities:</label>
+         <label for="communityFilter" style="font-size:14px;color:#444;">Community/ies:</label>
 <select id="communityFilter">
   <option value="ALL">All</option>
   <option value="Mannanam (Kottayam)">Mannanam (Kottayam)</option>
