Update header for community news section

--- a/news.html
+++ b/news.html
@@ -282,8 +282,8 @@
   <div class="page-pad">
     <header>
       <div class="wrap">
-        <h1>Latest News</h1>
-        <div class="sub">Janasabha community updates</div>
+        <h1>Community News </h1>
+        <div class="sub"></div>
 
         <div class="toolbar">
          <label for="communityFilter" style="font-size:14px;color:#444;">Community/ies:</label>
